Updated Code Review for new Mid Level Developer Position
